--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "lego-project",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "swagger": "node ./swagger.js",
-    "start" : "nodemon server.js"
+    "start" : "nodemon index.js"
   },
   "keywords": [],
   "author": "",
