--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "swagger": "node ./swagger.js",
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "esl": "^11.1.1",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.6.1",
     "nodemon": "^3.1.0",
     "swagger-autogen": "^2.23.7",
