--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "esl": "^11.1.1",
-    "express": "^4.19.2",
-    "express-validator": "^7.0.1",
-    "mongodb": "^6.6.1",
-    "nodemon": "^3.1.0",
-    "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.0"
+    "body-parser": "^1.18.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.16.3",
+    "mongodb": "^4.4.0",
+    "swagger-ui-express": "^4.3.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5"
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^2.5.1",
+    "swagger-autogen": "^2.19.0"
   }
 }
